@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.420 2019/07/31 13:25:00 brook Exp $
+# $NetBSD: Makefile,v 1.421 2019/07/31 13:26:42 brook Exp $
 
 COMMENT=	Mathematics
 
@@ -86,6 +86,7 @@ SUBDIR+=	R-quantreg
 SUBDIR+=	R-randomForest
 SUBDIR+=	R-relimp
 SUBDIR+=	R-reshape2
+SUBDIR+=	R-rstudioapi
 SUBDIR+=	R-sgeostat
 SUBDIR+=	R-shapefiles
 SUBDIR+=	R-sp
