@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:26:42 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/rstudioapi/
+COMMENT=	Safely access the RStudio API
+LICENSE=	mit
+
+R_PKGNAME=	rstudioapi
+R_PKGVER=	0.10
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
